# Connect4FastApi

./: .env  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
src/: main.py
