[tool.poetry]
name = "connect4fastapi"
version = "0.1.0"
description = ""
authors = ["Coch <constantin.verine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
peewee = "^3.17.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
